--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -6,7 +6,7 @@ form {
 
 label {
   font-family: $font--heading;
-  @include dark-mode($color: $colour-dark-mode-white);
+  @include dark-mode($colour: $colour-dark-mode-white);
 }
 
 input {
