--- a/src/scss/base/typography/_general.scss
+++ b/src/scss/base/typography/_general.scss
@@ -1,6 +1,6 @@
 ::selection {
   background: $colour-primary;
-  @include dark-mode($color: $black);
+  @include dark-mode($colour: $black);
   color: $white;
 }
 
@@ -96,7 +96,7 @@ li {
   &::marker {
     color: $colour-primary;
     font-family: $font--heading;
-    @include dark-mode($color: $colour-dark-mode-primary);
+    @include dark-mode($colour: $colour-dark-mode-primary);
   }
 }
 
